[package]
name = "uniffi-example-async-api-client"
edition = "2021"
version = "0.26.1"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "uniffi_async_api_client"

[dependencies]
async-trait = "0.1"
uniffi = { version = "0.28" }
serde = { version = "1", features=["derive"] }
serde_json = "1"
thiserror = "1.0"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }
