[package]
name = "lni_napi_rs"
edition = "2021"
version = "0.26.1"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "lni_napi_rs"

[dependencies]
lni = { path = "../../crates/lni", features = ["napi_rs", "spark"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1", features=["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "socks"] }
tokio = { version = "1", features = ["full"] }
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2.16"
dotenv = "0.15.0"
lazy_static = "1.4.0"
bip39 = "2.2.2"
rand = "0.8"


[build-dependencies]
napi-build = "2.0.1"

[features]
napi_rs = []
default = ["napi_rs"]

