[package]
name = "lni_uniffi"
edition = "2021"
version = "0.26.1"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "lni_uniffi"

[dependencies]
lni = { path = "../../crates/lni" }
async-trait = "0.1"
uniffi = { version = "0.28" }
thiserror = "1.0"
serde = { version = "1", features=["derive"] }
serde_json = "1"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

[features]
napi_rs = []
default = []