[package]
name = "lni_uniffi"
edition = "2021"
version = "0.26.1"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "lni_uniffi"

[dependencies]
lni = { path = "../../crates/lni", features = ["uniffi"] }
async-trait = "0.1"
uniffi = { version = "0.29.0", features = ["tokio", "cli"] }
thiserror = "1.0"
serde = { version = "1", features=["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "socks"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.0", features = ["bindgen-tests"] }

[features]
uniffi = []
default = ["uniffi"]