[package]
name = "lni"
version = "0.1.0"
edition = "2021"

[lib]
name = "lni"
path = "lib.rs"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[profile.release]
lto = true
strip = "symbols"

[features]
napi_rs = []
default = []
