[package]
name = "lni"
version = "0.1.0"
edition = "2021"

[lib]
name = "lni"
path = "lib.rs"
crate-type = ["staticlib", "lib"] # *NOTE - this is needed for uniffi to generate the correct bindings in react native, comment this out when building for napi_rs

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
    "socks",
] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29.0", features = ["tokio", "cli"] }
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
async-std = "1.10.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
base64 = "0.13"
serde_urlencoded = "0.7"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
lightning-invoice = "0.33.1"
regex = "1"
json = "0.12"
uuid = { version = "1.0", features = ["v4"] }
nwc = "0.43.0"
nostr = "0.43.0"
chrono = { version = "0.4", features = ["serde"] }

# Spark SDK (optional, requires feature flag)
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.6.3", optional = true }

[dev-dependencies]
async-attributes = "1.1.1"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.29.0", features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[profile.release]
lto = true
strip = "symbols"

[features]
napi_rs = []
uniffi = []
spark = ["dep:breez-sdk-spark"]
default = ["uniffi"]
