[package]
name = "lni"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/lightning-node-interface/lni"
repository = "https://github.com/lightning-node-interface/lni"
documentation = "https://docs.rs/lni/"
description = "Connect to the major lightning node implementations with a standard interface. LND, LNDK, CLN, Phoenixd, LNURL. Binding support for Android, IOS, React-Native, Typescript, JavaScript, Linux, Windows and Mac"
keywords = ["lightning", "lni"]
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# We'll rely on the workspace for the actual version
uniffi = { workspace = true, optional = true } 
uniffi_macros = { workspace = true, optional = true }

wasm-bindgen = { version = "0.2", optional = true, features = ["serde"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
gloo-timers = { version = "0.2", optional = true, features = ["futures"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0.64"
async-trait = "0.1.50"
async-std = "1.13.0"
#js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
# If you need UniFFI for build scripts (generating scaffolding):
uniffi = { workspace = true, optional = true, features = ["build"] }

[features]
default = []

# Make sure to reference the optional deps with "dep:".
uniffi = [
  "dep:uniffi",
  "dep:uniffi_macros",  
]

wasm = [
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
  "dep:gloo-timers",
]
