[package]
name = "lni"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/lightning-node-interface/lni"
repository = "https://github.com/lightning-node-interface/lni"
documentation = "https://docs.rs/lni/"
description = "Connect to the major lightning node implementations with a standard interface. LND, LNDK, CLN, Phoenixd, LNURL. Language binding support for Kotlin, Swift, react-native and nodejs. Runs on Linux, Windows, Mac, Android and iOS,"
keywords = ["lightning", "lni"]
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# We'll rely on the workspace for the actual version
uniffi = { workspace = true, optional = true } 
uniffi_macros = { workspace = true, optional = true }
log = "0.4"
thiserror = "1.0.64"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4"
rand = "0.8.5"
async-std = { version = "1.13.0", features = ["attributes"] }

[build-dependencies]
uniffi = { workspace = true, optional = true, features = ["build"] }

