[package]
name = "lni"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/lightning-node-interface/lni"
repository = "https://github.com/lightning-node-interface/lni"
documentation = "https://docs.rs/lni/"
description = "Connect to the major lightning node implementations with a standard interface. LND, LNDK, CLN, Phoenixd, LNURL. Language binding support for Kotlin, Swift, react-native and nodejs. Runs on Linux, Windows, Mac, Android and iOS,"
keywords = ["lightning", "lni"]
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "lni"

[dependencies]
async-trait = "0.1.85"
uniffi = { workspace = true }
serde = { version = "1", features=["derive"] }
serde_json = "1"
thiserror = "1.0.64"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4"
chrono = "0.4"
rand = "0.8.5"
async-std = { version = "1.13.0", features = ["attributes"] }
nwc = "0.38.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
